[project]

name = "multi_med_image_ml"

version = "0.0.17"

dependencies = [
  "numpy",
  "scipy",
  "torch",
  "torchvision",
  "opencv-python>=4.5.4",
  "slideio==2.4.1",
  "scikit-image",
  "pillow",
  "nibabel",
  "datefinder",
  "monai",
  "dicom2nifti",
  "python-dateutil",
  "scikit-learn",
  "pydicom",
  "dcm2niix",
  "platformdirs",
  "pytorch-gradcam",
  "requests",
  "gdown"
]
requires-python = ">=3.8"

authors = [
  {name = "Matt Leming", email = "mleming@mgh.harvard.edu"}
]
maintainers = [
  {name = "Matt Leming", email = "mleming@mgh.harvard.edu"}
]

description = "Deep learning library to encode multiple brain images and other electronic health record data in disease detection."

readme = {file = "README.md", content-type="text/markdown"}

license = {text = "MIT License"}

keywords = ["mri", "biomedical", "pytorch", "deep learning", "machine learning", "ehr"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/mleming/MultiMedImageML"
