[project]

name = "multi_med_image_ml"

version = "0.0.27"

dependencies = [
  "numpy>=1.22.0",
  "scipy>=1.9.3",
  "torch>=1.13.0",
  "torchvision>=0.14.0",
  "opencv-python>=4.5.4",
  "scikit-image>=0.19.3",
  "pillow>=9.3.0",
  "nibabel>=5.2.1",
  "datefinder",
  "monai>=1.3.1",
  "dicom2nifti",
  "python-dateutil",
  "scikit-learn>=1.2.0",
  "pydicom>=2.4.4",
  "dcm2niix",
  "platformdirs",
  "requests>=2.28.1",
  "gdown>=4.4.0"
]
requires-python = ">=3.8"

authors = [
  {name = "Matt Leming", email = "mleming@mgh.harvard.edu"}
]
maintainers = [
  {name = "Matt Leming", email = "mleming@mgh.harvard.edu"}
]

description = "Deep learning library to encode multiple brain images and other electronic health record data in disease detection."

readme = {file = "README.md", content-type="text/markdown"}

license = {text = "MIT License"}

keywords = ["mri", "biomedical", "pytorch", "deep learning", "machine learning", "ehr"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/mleming/MultiMedImageML"
